[gd_scene load_steps=5 format=3 uid="uid://k10m7sae6uup"]

[ext_resource type="Script" uid="uid://cg1pqyhidk1ad" path="res://Scenes/encyclopedia_robot_screen.gd" id="1_v1qki"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4x86"]
bg_color = Color(0.3764706, 0.3764706, 0.3764706, 1)
border_width_left = 50
border_width_top = 50
border_width_right = 50
border_width_bottom = 50
border_color = Color(0.627451, 0.627451, 0.627451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahmee"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_56vox"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_v1qki")

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 980.0
offset_right = 386.0
offset_bottom = 1043.0
theme_override_font_sizes/font_size = 40
text = "INDICE ENCICLOPEDICO
"

[node name="RiquadroRobot" type="Panel" parent="."]
layout_mode = 0
offset_left = 1078.0
offset_top = 224.0
offset_right = 1881.0
offset_bottom = 1017.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h4x86")

[node name="Titolo" type="Panel" parent="."]
modulate = Color(0.85050595, 0.64685506, 0.49341863, 1)
layout_mode = 0
offset_left = 414.0
offset_top = 65.0
offset_right = 1514.0
offset_bottom = 170.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ahmee")

[node name="Testo" type="Label" parent="Titolo"]
layout_mode = 0
offset_left = 296.0
offset_top = 21.0
offset_right = 804.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(0, 0.23137255, 0.33333334, 1)
theme_override_font_sizes/font_size = 40
text = "ENCICLOPEDIA - TORRETTE"

[node name="MonsterDescriptionPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1070.0
offset_top = 242.0
offset_right = -48.0
offset_bottom = -193.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_56vox")

[node name="MonsterDescription" type="Label" parent="MonsterDescriptionPanel"]
layout_mode = 0
offset_left = 124.0
offset_top = 388.0
offset_right = 707.0
offset_bottom = 655.0
theme_override_font_sizes/font_size = 32
vertical_alignment = 1
autowrap_mode = 3

[node name="MonsterName" type="Label" parent="MonsterDescriptionPanel"]
layout_mode = 0
offset_left = 59.0
offset_top = 314.0
offset_right = 746.0
offset_bottom = 472.0
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="MonsterTexture" type="TextureRect" parent="MonsterDescriptionPanel"]
texture_filter = 1
layout_mode = 0
offset_left = 160.0
offset_top = 26.0
offset_right = 636.0
offset_bottom = 323.0
stretch_mode = 5

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
